delete class .list

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
 
 <body>
     <!--Шапка сайта-->
-    <header class="header">
+    <header class="page-header">
         <div class="container header-block">
             <div class="header-site">
-                <a href="./index.html" class="logo list">Web<span class="logo-first">Studio</span></a>
+                <a href="./index.html" class="logo">Web<span class="logo-first">Studio</span></a>
                 <nav class="site-nav">
-                    <ul class="list site-list">
+                    <ul class="site-list">
                         <li class="site-item"><a href="./index.html" class="link current">Студія</a></li>
                         <li class="site-item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
                         <li class="site-item"><a href="./ " class="link">Контакти</a></li>
                     </ul>
                 </nav>
             </div>
-            <ul class="list info-nav">
+            <ul class="info-nav">
                 <li class="info-item"> <a href="mailto:info@devstudio.com" class="info-link">
                         <svg class="icon icon-formail" width="16" height="12">
                             <use xlink:href="./images/icons.svg#icon-formail"></use>
@@ -59,7 +59,7 @@
         <section class="section advantages">
             <div class="container">
                 <h2 hidden class="title">Переваги</h2>
-                <ul class="list adv-list">
+                <ul class="adv-list">
                     <li class="adv-item">
                         <div class="image-icon">
                             <svg class="icon icon-antenna-1" width="70" height="70">
@@ -101,7 +101,7 @@
         <section class="section doing">
             <div class="container">
                 <h2 class="title">Чим ми займаємося</h2>
-                <ul class="list doing-list">
+                <ul class="doing-list">
                     <li class="doing-item">
                         <img src="./images/box-1.jpeg" alt="програміст пише код на комп'ютері" width="370" height="294">
                         <p class="doing-text">Десктопні додатки</p>
@@ -123,12 +123,12 @@
         <section class="section team">
             <div class="container">
                 <h2 class="title ">Наша команда</h2>
-                <ul class="list team-list">
+                <ul class="team-list">
                     <li class="team-member">
                         <img src="./images/ihor_designer.jpeg" alt="фото дизайнера" width="270" height="260">
                         <h3 class="team-mate">Ігор Дем'яненко</h3>
                         <p class="team-jobs">Product Designer</p>
-                        <ul class="socials list">
+                        <ul class="socials">
                             <li class="socials-items">
                                 <a href="#" class="socials-link" target="_blank" rel="noopener norefferer">
                                     <svg class="icon icon-instagram-1" width="20" height="20">
@@ -199,7 +199,7 @@
                         <img src="./images/mykola_marketing.jpeg" alt="фото маркетолога" width="270" height="260">
                         <h3 class="team-mate">Микола Тарасов</h3>
                         <p class="team-jobs">Marketing</p>
-                        <ul class="socials list">
+                        <ul class="socials">
                             <li class="socials-items">
                                 <a href="#" class="socials-link" target="_blank" rel="noopener norefferer">
                                     <svg class="icon icon-instagram-1" width="20" height="20">
@@ -234,7 +234,7 @@
                         <img src="./images/mikhailo_designer.jpeg" alt="фото дизайнера" width="270" height="260">
                         <h3 class="team-mate">Михайло Єрмаков</h3>
                         <p class="team-jobs">UI Designer</p>
-                        <ul class="socials list">
+                        <ul class="socials">
                             <li class="socials-items">
                                 <a href="#" class="socials-link" target="_blank" rel="noopener norefferer">
                                     <svg class="icon icon-instagram-1" width="20" height="20">
@@ -271,7 +271,7 @@
         <!--Постійні клієнти-->
         <section class="section">
             <h2 class="title">Постійні клієнти</h2>
-            <ul class="list constant-clients">
+            <ul class="constant-clients">
                 <li>
                     <a href="#" class="client-link" target="_blank" rel="noopener norefferer">
                         <svg class="icon icon-group" width="41" height="47">
@@ -366,9 +366,9 @@
     <footer class="footer">
         <div class="container footer-block">
             <div class="footer-first">
-                <a href="./index.html" class="logo list">Web<span class="logo-last">Studio</span></a>
+                <a href="./index.html" class="logo">Web<span class="logo-last">Studio</span></a>
                 <address>
-                    <ul class="address-nav list">
+                    <ul class="address-nav">
                         <li class="footer-item"><a href="" target="_blank" rel="noopener noreferrer"
                                 class="link link-address">м. Київ, пр-т
                                 Лесі
@@ -382,7 +382,7 @@
             </div>
             <div class="footer-second">
                 <h2 class="socials-signin">приєднуйтесь</h2>
-                <ul class="socials list">
+                <ul class="socials">
                     <li class="socials-items">
                         <a href="#" class="socials-link footer-link" target="_blank" rel="noopener norefferer">
                             <svg class="icon icon-instagram-1" width="20" height="20">
