--- a/portfolio.html
+++ b/portfolio.html
@@ -20,16 +20,16 @@
     <header class="header">
         <div class="container header-block">
             <div class="header-site">
-                <a href="./index.html" class="logo list">Web<span class="logo-first">Studio</span></a>
+                <a href="./index.html" class="logo">Web<span class="logo-first">Studio</span></a>
                 <nav class="site-nav">
-                    <ul class="list site-list">
+                    <ul class="site-list">
                         <li class="site-item"><a href="./index.html" class="link">Студія</a></li>
                         <li class="site-item"><a href="./portfolio.html" class="link current">Портфоліо</a></li>
                         <li class="site-item"><a href="./ " class="link">Контакти</a></li>
                     </ul>
                 </nav>
             </div>
-            <ul class="list info-nav">
+            <ul class="info-nav">
                 <li class="info-item"> <a href="mailto:info@devstudio.com" class="info-link">
                         <svg class="icon icon-formail" width="16" height="12">
                             <use xlink:href="./images/icons.svg#icon-formail"></use>
@@ -48,7 +48,7 @@
         <section class="section">
             <div class="container filter-block">
                 <h1 hidden class="title">Фільтр з переліком робіт</h1>
-                <ul class="filter-buttons list">
+                <ul class="filter-buttons">
                     <li class="filter-item">
                         <button type="button" class="filter-button">Усі</button>
                     </li>
@@ -68,7 +68,7 @@
             </div>
             <!--Перелік робіт-->
             <div class="container">
-                <ul class="list work-list">
+                <ul class="work-list">
                     <li class="works">
                         <a href="#" target="_blank" rel="noopener norefferer">
                             <div class="work-appear">
@@ -221,9 +221,9 @@
     <footer class="footer">
         <div class="container footer-block">
             <div class="footer-first">
-                <a href="./index.html" class="logo list">Web<span class="logo-last">Studio</span></a>
+                <a href="./index.html" class="logo">Web<span class="logo-last">Studio</span></a>
                 <address>
-                    <ul class="address-nav list">
+                    <ul class="address-nav">
                         <li class="footer-item"><a href="" target="_blank" rel="noopener noreferrer"
                                 class="link link-address">м. Київ, пр-т
                                 Лесі
@@ -237,7 +237,7 @@
             </div>
             <div class="footer-second">
                 <h2 class="socials-signin">приєднуйтесь</h2>
-                <ul class="socials list">
+                <ul class="socials">
                     <li class="socials-items">
                         <a href="#" class="socials-link footer-link" target="_blank" rel="noopener norefferer">
                             <svg class="icon icon-instagram-1" width="20" height="20">
