change header styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,26 +17,27 @@
 
 <body>
     <!--Шапка-->
-    <header class="header">
+    <header class="page-header">
         <div class="container header-block">
             <div class="header-site">
-                <a href="./index.html" class="logo">Web<span class="logo-first">Studio</span></a>
+                <a href="./index.html" class="logo">Web<span class="header__logo">Studio</span></a>
                 <nav class="site-nav">
-                    <ul class="site-list">
-                        <li class="site-item"><a href="./index.html" class="link">Студія</a></li>
-                        <li class="site-item"><a href="./portfolio.html" class="link current">Портфоліо</a></li>
-                        <li class="site-item"><a href="./ " class="link">Контакти</a></li>
+                    <ul class="site-nav__list">
+                        <li class="site-nav__item"><a href="./index.html"
+                                class="site-nav__link">Студія</a></li>
+                        <li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link site-nav__link--current">Портфоліо</a></li>
+                        <li class="site-nav__item"><a href="./ " class="site-nav__link">Контакти</a></li>
                     </ul>
                 </nav>
             </div>
             <ul class="info-nav">
-                <li class="info-item"> <a href="mailto:info@devstudio.com" class="info-link">
-                        <svg class="icon icon-formail" width="16" height="12">
+                <li class="info-nav__item"> <a href="mailto:info@devstudio.com" class="info-nav__link">
+                        <svg class="info-nav__icon icon-formail" width="16" height="12">
                             <use xlink:href="./images/icons.svg#icon-formail"></use>
                         </svg>
                         info@devstudio.com</a></li>
-                <li class="info-item"><a href="tel:+380961111111" class="info-link">
-                        <svg class="icon icon-phone" width="10" height="16">
+                <li class="info-nav__item"><a href="tel:+380961111111" class="info-nav__link">
+                        <svg class="info-nav__icon icon-phone" width="10" height="16">
                             <use xlink:href="./images/icons.svg#icon-phone"></use>
                         </svg>+38 096 111 11 11</a></li>
             </ul>
@@ -221,7 +222,7 @@
     <footer class="footer">
         <div class="container footer-block">
             <div class="footer-first">
-                <a href="./index.html" class="logo">Web<span class="logo-last">Studio</span></a>
+                <a href="./index.html" class="logo">Web<span class="footer__logo">Studio</span></a>
                 <address>
                     <ul class="address-nav">
                         <li class="footer-item"><a href="" target="_blank" rel="noopener noreferrer"
