--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
     <header class="page-header">
         <div class="container header-block">
             <div class="header-site">
-                <a href="./index.html" class="logo">Web<span class="logo-first">Studio</span></a>
+                <a href="./index.html" class="logo">Web<span class="header__logo">Studio</span></a>
                 <nav class="site-nav">
-                    <ul class="site-list">
-                        <li class="site-item"><a href="./index.html" class="link current">Студія</a></li>
-                        <li class="site-item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
-                        <li class="site-item"><a href="./ " class="link">Контакти</a></li>
+                    <ul class="site-nav__list">
+                        <li class="site-nav__item"><a href="./index.html" class="site-nav__link site-nav__link--current">Студія</a></li>
+                        <li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link">Портфоліо</a></li>
+                        <li class="site-nav__item"><a href="./ " class="site-nav__link">Контакти</a></li>
                     </ul>
                 </nav>
             </div>
             <ul class="info-nav">
-                <li class="info-item"> <a href="mailto:info@devstudio.com" class="info-link">
-                        <svg class="icon icon-formail" width="16" height="12">
+                <li class="info-nav__item"> <a href="mailto:info@devstudio.com" class="info-nav__link">
+                        <svg class="info-nav__icon icon-formail" width="16" height="12">
                             <use xlink:href="./images/icons.svg#icon-formail"></use>
                         </svg>
                         info@devstudio.com</a></li>
-                <li class="info-item"><a href="tel:+380961111111" class="info-link">
-                        <svg class="icon icon-phone" width="10" height="16">
+                <li class="info-nav__item"><a href="tel:+380961111111" class="info-nav__link">
+                        <svg class="info-nav__icon icon-phone" width="10" height="16">
                             <use xlink:href="./images/icons.svg#icon-phone"></use>
                         </svg>+38 096 111 11 11</a></li>
             </ul>
@@ -164,7 +164,7 @@
                         <img src="./images/olga_developer.jpeg" alt="фото розробниці" width="270" height="260">
                         <h3 class="team-mate">Ольга Рєпіна</h3>
                         <p class="team-jobs">Frontend Developer</p>
-                        <ul class="socials list">
+                        <ul class="socials">
                             <li class="socials-items">
                                 <a href="#" class="socials-link" target="_blank" rel="noopener norefferer">
                                     <svg class="icon icon-instagram-1" width="20" height="20">
@@ -366,7 +366,7 @@
     <footer class="footer">
         <div class="container footer-block">
             <div class="footer-first">
-                <a href="./index.html" class="logo">Web<span class="logo-last">Studio</span></a>
+                <a href="./index.html" class="logo">Web<span class="footer__logo">Studio</span></a>
                 <address>
                     <ul class="address-nav">
                         <li class="footer-item"><a href="" target="_blank" rel="noopener noreferrer"
