make new path to main.css with scss in index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/modern-normalize.css">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/generated/expanded/main.css">
     <title>Studio</title>
 
 </head>
@@ -21,7 +21,7 @@
     <header class="page-header">
         <div class="container header-block">
             <div class="header-site">
-                <a href="./index.html" class="logo">Web<span class="header__logo">Studio</span></a>
+                <a href="./index.html" class="logo header__logo">Web<span class="header__logo--black">Studio</span></a>
                 <nav class="site-nav">
                     <ul class="site-nav__list">
                         <li class="site-nav__item"><a href="./index.html" class="site-nav__link site-nav__link--current">Студія</a></li>
@@ -366,7 +366,7 @@
     <footer class="footer">
         <div class="container footer-block">
             <div class="footer-first">
-                <a href="./index.html" class="logo">Web<span class="footer__logo">Studio</span></a>
+                <a href="./index.html" class="logo">Web<span class="footer__logo--white">Studio</span></a>
                 <address>
                     <ul class="address-nav">
                         <li class="footer-item"><a href="" target="_blank" rel="noopener noreferrer"
