change hero section

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     <main>
         <!--Герой-->
         <section class="hero">
-            <div class="container hero-block">
-                <h1 class="hero-title">Ефективні рішення для <br>вашого бізнесу</h1>
+            <div class="container hero__block">
+                <h1 class="hero__title">Ефективні рішення для <br>вашого бізнесу</h1>
                 <div class="button-wrapper">
-                    <button data-modal-open type="button" class="hero-button">Замовити послугу</button>
+                    <button data-modal-open type="button" class="button hero__button">Замовити послугу</button>
                 </div>
             </div>
         </section>
