--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         <section class="section advantages">
             <div class="container">
                 <h2 hidden class="title">Переваги</h2>
-                <ul class="adv-list">
-                    <li class="adv-item">
-                        <div class="image-icon">
+                <ul class="advantages__list">
+                    <li class="advantages__item">
+                        <div class="adv-icon">
                             <svg class="icon icon-antenna-1" width="70" height="70">
                                 <use xlink:href="./images/icons.svg#icon-antenna-1"></use>
                             </svg>
@@ -70,24 +70,24 @@
                         <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
                         </p>
                     </li>
-                    <li class="adv-item">
-                        <div class="image-icon"><svg class="icon icon-clock-1" width="70" height="70">
+                    <li class="advantages__item">
+                        <div class="adv-icon"><svg class="icon icon-clock-1" width="70" height="70">
                                 <use xlink:href="./images/icons.svg#icon-clock-1"></use>
                             </svg>
                         </div>
                         <h3 class="item">ПУНКТУАЛЬНІСТЬ</h3>
                         <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
-                    <li class="adv-item">
-                        <div class="image-icon"><svg class="icon icon-diagram-1" width="70" height="70">
+                    <li class="advantages__item">
+                        <div class="adv-icon"><svg class="icon icon-diagram-1" width="70" height="70">
                                 <use xlink:href="./images/icons.svg#icon-diagram-1"></use>
                             </svg>
                         </div>
                         <h3 class="item">ПЛАНУВАННЯ</h3>
                         <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
-                    <li class="adv-item">
-                        <div class="image-icon"><svg class="icon icon-astronaut-1" width="70" height="70">
+                    <li class="advantages__item">
+                        <div class="adv-icon"><svg class="icon icon-astronaut-1" width="70" height="70">
                                 <use xlink:href="./images/icons.svg#icon-astronaut-1"></use>
                             </svg>
                         </div>
