--- a/index.html
+++ b/index.html
@@ -101,20 +101,20 @@
         <section class="section doing">
             <div class="container">
                 <h2 class="title">Чим ми займаємося</h2>
-                <ul class="doing-list">
-                    <li class="doing-item">
+                <ul class="doing__list">
+                    <li class="doing__item">
                         <img src="./images/box-1.jpeg" alt="програміст пише код на комп'ютері" width="370" height="294">
-                        <p class="doing-text">Десктопні додатки</p>
+                        <p class="doing__text">Десктопні додатки</p>
                     </li>
-                    <li class="doing-item">
+                    <li class="doing__item">
                         <img src="./images/box-2.jpeg" alt="синхронізація телефону з комп'ютером" width="370"
                             height="294">
-                        <p class="doing-text">Мобільні додатки</p>
+                        <p class="doing__text">Мобільні додатки</p>
                     </li>
-                    <li class="doing-item">
+                    <li class="doing__item">
                         <img src="./images/box-3.jpeg" alt="палітра кольорів на планшеті у руці дизайнера " width="370"
                             height="294">
-                        <p class="doing-text">Дизайнерські рішення</p>
+                        <p class="doing__text">Дизайнерські рішення</p>
                     </li>
                 </ul>
             </div>
