--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                 <a href="./index.html" class="logo header__logo">Web<span class="header__logo--black">Studio</span></a>
                 <nav class="site-nav">
                     <ul class="site-nav__list">
-                        <li class="site-nav__item"><a href="./index.html" class="site-nav__link site-nav__link--current">Студія</a></li>
+                        <li class="site-nav__item"><a href="./index.html"
+                                class="site-nav__link site-nav__link--current">Студія</a></li>
                         <li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link">Портфоліо</a></li>
                         <li class="site-nav__item"><a href="./ " class="site-nav__link">Контакти</a></li>
                     </ul>
@@ -123,35 +124,35 @@
         <section class="section team">
             <div class="container">
                 <h2 class="title ">Наша команда</h2>
-                <ul class="team-list">
-                    <li class="team-member">
+                <ul class="team__list">
+                    <li class="team__member">
                         <img src="./images/ihor_designer.jpeg" alt="фото дизайнера" width="270" height="260">
                         <h3 class="team-mate">Ігор Дем'яненко</h3>
                         <p class="team-jobs">Product Designer</p>
                         <ul class="socials">
-                            <li class="socials-items">
-                                <a href="#" class="socials-link" target="_blank" rel="noopener norefferer">
+                            <li class="socials__items">
+                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
                                     <svg class="icon icon-instagram-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-instagram-1"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="socials-items">
-                                <a href="#" class="socials-link" target="_blank" rel="noopener norefferer">
+                            <li class="socials__items">
+                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
                                     <svg class="icon icon-twitter-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-twitter-1"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="socials-items">
-                                <a href="#" class="socials-link" target="_blank" rel="noopener norefferer">
+                            <li class="socials__items">
+                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
                                     <svg class="icon icon-facebook-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="socials-items">
-                                <a href="#" class="socials-link" target="_blank" rel="noopener norefferer">
+                            <li class="socials__items">
+                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
                                     <svg class="icon icon-linkedin-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
@@ -160,34 +161,34 @@
                         </ul>
 
                     </li>
-                    <li class="team-member">
+                    <li class="team__member">
                         <img src="./images/olga_developer.jpeg" alt="фото розробниці" width="270" height="260">
                         <h3 class="team-mate">Ольга Рєпіна</h3>
                         <p class="team-jobs">Frontend Developer</p>
                         <ul class="socials">
-                            <li class="socials-items">
-                                <a href="#" class="socials-link" target="_blank" rel="noopener norefferer">
+                            <li class="socials__items">
+                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
                                     <svg class="icon icon-instagram-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-instagram-1"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="socials-items">
-                                <a href="#" class="socials-link" target="_blank" rel="noopener norefferer">
+                            <li class="socials__items">
+                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
                                     <svg class="icon icon-twitter-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-twitter-1"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="socials-items">
-                                <a href="#" class="socials-link" target="_blank" rel="noopener norefferer">
+                            <li class="socials__items">
+                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
                                     <svg class="icon icon-facebook-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="socials-items">
-                                <a href="#" class="socials-link" target="_blank" rel="noopener norefferer">
+                            <li class="socials__items">
+                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
                                     <svg class="icon icon-linkedin-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
@@ -195,34 +196,34 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="team-member">
+                    <li class="team__member">
                         <img src="./images/mykola_marketing.jpeg" alt="фото маркетолога" width="270" height="260">
                         <h3 class="team-mate">Микола Тарасов</h3>
                         <p class="team-jobs">Marketing</p>
                         <ul class="socials">
-                            <li class="socials-items">
-                                <a href="#" class="socials-link" target="_blank" rel="noopener norefferer">
+                            <li class="socials__items">
+                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
                                     <svg class="icon icon-instagram-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-instagram-1"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="socials-items">
-                                <a href="#" class="socials-link" target="_blank" rel="noopener norefferer">
+                            <li class="socials__items">
+                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
                                     <svg class="icon icon-twitter-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-twitter-1"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="socials-items">
-                                <a href="#" class="socials-link" target="_blank" rel="noopener norefferer">
+                            <li class="socials__items">
+                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
                                     <svg class="icon icon-facebook-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="socials-items">
-                                <a href="#" class="socials-link" target="_blank" rel="noopener norefferer">
+                            <li class="socials__items">
+                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
                                     <svg class="icon icon-linkedin-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
@@ -230,34 +231,34 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="team-member">
+                    <li class="team__member">
                         <img src="./images/mikhailo_designer.jpeg" alt="фото дизайнера" width="270" height="260">
                         <h3 class="team-mate">Михайло Єрмаков</h3>
                         <p class="team-jobs">UI Designer</p>
                         <ul class="socials">
-                            <li class="socials-items">
-                                <a href="#" class="socials-link" target="_blank" rel="noopener norefferer">
+                            <li class="socials__items">
+                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
                                     <svg class="icon icon-instagram-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-instagram-1"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="socials-items">
-                                <a href="#" class="socials-link" target="_blank" rel="noopener norefferer">
+                            <li class="socials__items">
+                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
                                     <svg class="icon icon-twitter-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-twitter-1"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="socials-items">
-                                <a href="#" class="socials-link" target="_blank" rel="noopener norefferer">
+                            <li class="socials__items">
+                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
                                     <svg class="icon icon-facebook-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="socials-items">
-                                <a href="#" class="socials-link" target="_blank" rel="noopener norefferer">
+                            <li class="socials__items">
+                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
                                     <svg class="icon icon-linkedin-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
@@ -383,29 +384,29 @@
             <div class="footer-second">
                 <h2 class="socials-signin">приєднуйтесь</h2>
                 <ul class="socials">
-                    <li class="socials-items">
-                        <a href="#" class="socials-link footer-link" target="_blank" rel="noopener norefferer">
+                    <li class="socials__items">
+                        <a href="#" class="socials__link footer-link" target="_blank" rel="noopener norefferer">
                             <svg class="icon icon-instagram-1" width="20" height="20">
                                 <use xlink:href="./images/icons.svg#icon-instagram-1"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="socials-items">
-                        <a href="#" class="socials-link footer-link" target="_blank" rel="noopener norefferer">
+                    <li class="socials__items">
+                        <a href="#" class="socials__link footer-link" target="_blank" rel="noopener norefferer">
                             <svg class="icon icon-twitter-1" width="20" height="20">
                                 <use xlink:href="./images/icons.svg#icon-twitter-1"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="socials-items">
-                        <a href="#" class="socials-link footer-link" target="_blank" rel="noopener norefferer">
+                    <li class="socials__items">
+                        <a href="#" class="socials__link footer-link" target="_blank" rel="noopener norefferer">
                             <svg class="icon icon-facebook-1" width="20" height="20">
                                 <use xlink:href="./images/icons.svg#icon-facebook-1"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="socials-items">
-                        <a href="#" class="socials-link footer-link" target="_blank" rel="noopener norefferer">
+                    <li class="socials__items">
+                        <a href="#" class="socials__link footer-link" target="_blank" rel="noopener norefferer">
                             <svg class="icon icon-linkedin-1" width="20" height="20">
                                 <use xlink:href="./images/icons.svg#icon-linkedin-1"></use>
                             </svg>
@@ -430,4 +431,5 @@
     </footer>
     <script src="./js/modal.js"></script>
 </body>
+
 </html>
