--- a/portfolio.html
+++ b/portfolio.html
@@ -23,9 +23,9 @@
                 <a href="./index.html" class="logo">Web<span class="header__logo">Studio</span></a>
                 <nav class="site-nav">
                     <ul class="site-nav__list">
-                        <li class="site-nav__item"><a href="./index.html"
-                                class="site-nav__link">Студія</a></li>
-                        <li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link site-nav__link--current">Портфоліо</a></li>
+                        <li class="site-nav__item"><a href="./index.html" class="site-nav__link">Студія</a></li>
+                        <li class="site-nav__item"><a href="./portfolio.html"
+                                class="site-nav__link site-nav__link--current">Портфоліо</a></li>
                         <li class="site-nav__item"><a href="./ " class="site-nav__link">Контакти</a></li>
                     </ul>
                 </nav>
@@ -239,29 +239,29 @@
             <div class="footer-second">
                 <h2 class="socials-signin">приєднуйтесь</h2>
                 <ul class="socials">
-                    <li class="socials-items">
-                        <a href="#" class="socials-link footer-link" target="_blank" rel="noopener norefferer">
+                    <li class="socials__items">
+                        <a href="#" class="socials__link footer-link" target="_blank" rel="noopener norefferer">
                             <svg class="icon icon-instagram-1" width="20" height="20">
                                 <use xlink:href="./images/icons.svg#icon-instagram-1"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="socials-items">
-                        <a href="#" class="socials-link footer-link" target="_blank" rel="noopener norefferer">
+                    <li class="socials__items">
+                        <a href="#" class="socials__link footer-link" target="_blank" rel="noopener norefferer">
                             <svg class="icon icon-twitter-1" width="20" height="20">
                                 <use xlink:href="./images/icons.svg#icon-twitter-1"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="socials-items">
-                        <a href="#" class="socials-link footer-link" target="_blank" rel="noopener norefferer">
+                    <li class="socials__items">
+                        <a href="#" class="socials__link footer-link" target="_blank" rel="noopener norefferer">
                             <svg class="icon icon-facebook-1" width="20" height="20">
                                 <use xlink:href="./images/icons.svg#icon-facebook-1"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="socials-items">
-                        <a href="#" class="socials-link footer-link" target="_blank" rel="noopener norefferer">
+                    <li class="socials__items">
+                        <a href="#" class="socials__link footer-link" target="_blank" rel="noopener norefferer">
                             <svg class="icon icon-linkedin-1" width="20" height="20">
                                 <use xlink:href="./images/icons.svg#icon-linkedin-1"></use>
                             </svg>
@@ -272,14 +272,15 @@
             <div class="footer-third">
                 <h2 class="socials-signin">Підпишіться на розсилку</h2>
                 <form action="#" name="form-subscribe" class="form-subscribe">
-                    <input type="email" name="email-subscribe" id="email-subscribe" placeholder="E-mail" class="email-subscribe">
+                    <input type="email" name="email-subscribe" id="email-subscribe" placeholder="E-mail"
+                        class="email-subscribe">
                     <button type="submit" class="btn-subscribe"> Підписатися
                         <svg class="icon icon-icon-send" width="24" height="24">
                             <use xlink:href="./images/icons.svg#icon-icon-send"></use>
                         </svg>
                     </button>
                 </form>
-            
+
             </div>
         </div>
     </footer>
