--- a/index.html
+++ b/index.html
@@ -127,32 +127,36 @@
                 <ul class="team__list">
                     <li class="team__member">
                         <img src="./images/ihor_designer.jpeg" alt="фото дизайнера" width="270" height="260">
-                        <h3 class="team-mate">Ігор Дем'яненко</h3>
-                        <p class="team-jobs">Product Designer</p>
-                        <ul class="socials">
+                        <h3 class="team__mate">Ігор Дем'яненко</h3>
+                        <p class="team__jobs">Product Designer</p>
+                        <ul class="socials team__socials">
                             <li class="socials__items">
-                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
+                                <a href="#" class="socials__link socials__link--team" target="_blank"
+                                    rel="noopener norefferer">
                                     <svg class="icon icon-instagram-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-instagram-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="socials__items">
-                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
+                                <a href="#" class="socials__link socials__link--team" target="_blank"
+                                    rel="noopener norefferer">
                                     <svg class="icon icon-twitter-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-twitter-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="socials__items">
-                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
+                                <a href="#" class="socials__link socials__link--team" target="_blank"
+                                    rel="noopener norefferer">
                                     <svg class="icon icon-facebook-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="socials__items">
-                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
+                                <a href="#" class="socials__link socials__link--team" target="_blank"
+                                    rel="noopener norefferer">
                                     <svg class="icon icon-linkedin-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
@@ -163,32 +167,36 @@
                     </li>
                     <li class="team__member">
                         <img src="./images/olga_developer.jpeg" alt="фото розробниці" width="270" height="260">
-                        <h3 class="team-mate">Ольга Рєпіна</h3>
-                        <p class="team-jobs">Frontend Developer</p>
-                        <ul class="socials">
+                        <h3 class="team__mate">Ольга Рєпіна</h3>
+                        <p class="team__jobs">Frontend Developer</p>
+                        <ul class="socials team__socials">
                             <li class="socials__items">
-                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
+                                <a href="#" class="socials__link socials__link--team" target="_blank"
+                                    rel="noopener norefferer">
                                     <svg class="icon icon-instagram-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-instagram-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="socials__items">
-                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
+                                <a href="#" class="socials__link socials__link--team" target="_blank"
+                                    rel="noopener norefferer">
                                     <svg class="icon icon-twitter-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-twitter-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="socials__items">
-                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
+                                <a href="#" class="socials__link socials__link--team" target="_blank"
+                                    rel="noopener norefferer">
                                     <svg class="icon icon-facebook-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="socials__items">
-                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
+                                <a href="#" class="socials__link socials__link--team" target="_blank"
+                                    rel="noopener norefferer">
                                     <svg class="icon icon-linkedin-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
@@ -198,32 +206,36 @@
                     </li>
                     <li class="team__member">
                         <img src="./images/mykola_marketing.jpeg" alt="фото маркетолога" width="270" height="260">
-                        <h3 class="team-mate">Микола Тарасов</h3>
-                        <p class="team-jobs">Marketing</p>
-                        <ul class="socials">
+                        <h3 class="team__mate">Микола Тарасов</h3>
+                        <p class="team__jobs">Marketing</p>
+                        <ul class="socials team__socials">
                             <li class="socials__items">
-                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
+                                <a href="#" class="socials__link socials__link--team" target="_blank"
+                                    rel="noopener norefferer">
                                     <svg class="icon icon-instagram-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-instagram-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="socials__items">
-                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
+                                <a href="#" class="socials__link socials__link--team" target="_blank"
+                                    rel="noopener norefferer">
                                     <svg class="icon icon-twitter-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-twitter-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="socials__items">
-                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
+                                <a href="#" class="socials__link socials__link--team" target="_blank"
+                                    rel="noopener norefferer">
                                     <svg class="icon icon-facebook-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="socials__items">
-                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
+                                <a href="#" class="socials__link socials__link--team" target="_blank"
+                                    rel="noopener norefferer">
                                     <svg class="icon icon-linkedin-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
@@ -233,32 +245,36 @@
                     </li>
                     <li class="team__member">
                         <img src="./images/mikhailo_designer.jpeg" alt="фото дизайнера" width="270" height="260">
-                        <h3 class="team-mate">Михайло Єрмаков</h3>
-                        <p class="team-jobs">UI Designer</p>
-                        <ul class="socials">
+                        <h3 class="team__mate">Михайло Єрмаков</h3>
+                        <p class="team__jobs">UI Designer</p>
+                        <ul class="socials team__socials">
                             <li class="socials__items">
-                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
+                                <a href="#" class="socials__link socials__link--team" target="_blank"
+                                    rel="noopener norefferer">
                                     <svg class="icon icon-instagram-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-instagram-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="socials__items">
-                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
+                                <a href="#" class="socials__link socials__link--team" target="_blank"
+                                    rel="noopener norefferer">
                                     <svg class="icon icon-twitter-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-twitter-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="socials__items">
-                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
+                                <a href="#" class="socials__link socials__link--team" target="_blank"
+                                    rel="noopener norefferer">
                                     <svg class="icon icon-facebook-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="socials__items">
-                                <a href="#" class="socials__link" target="_blank" rel="noopener norefferer">
+                                <a href="#" class="socials__link socials__link--team" target="_blank"
+                                    rel="noopener norefferer">
                                     <svg class="icon icon-linkedin-1" width="20" height="20">
                                         <use xlink:href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
