--- a/index.html
+++ b/index.html
@@ -381,8 +381,8 @@
     </main>
     <!--Підвал-->
     <footer class="footer">
-        <div class="container footer-block">
-            <div class="footer-first">
+        <div class="container footer__block">
+            <div class="footer__first">
                 <a href="./index.html" class="logo">Web<span class="footer__logo--white">Studio</span></a>
                 <address>
                     <ul class="address-nav">
@@ -397,7 +397,7 @@
                     </ul>
                 </address>
             </div>
-            <div class="footer-second">
+            <div class="footer__second">
                 <h2 class="socials-signin">приєднуйтесь</h2>
                 <ul class="socials">
                     <li class="socials__items">
@@ -430,7 +430,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="footer-third">
+            <div class="footer__third">
                 <h2 class="socials-signin">Підпишіться на розсилку</h2>
                 <form action="#" name="form-subscribe" class="form-subscribe">
                     <input type="email" name="email-subscribe" id="email-subscribe" placeholder="E-mail"
