--- a/portfolio.html
+++ b/portfolio.html
@@ -49,21 +49,21 @@
         <section class="section">
             <div class="container filter-block">
                 <h1 hidden class="title">Фільтр з переліком робіт</h1>
-                <ul class="filter-buttons">
-                    <li class="filter-item">
-                        <button type="button" class="filter-button">Усі</button>
+                <ul class="filter__buttons">
+                    <li class="filter__item">
+                        <button type="button" class="filter__button">Усі</button>
                     </li>
-                    <li class="filter-item">
-                        <button type="button" class="filter-button">Веб-сайти</button>
+                    <li class="filter__item">
+                        <button type="button" class="filter__button">Веб-сайти</button>
                     </li>
-                    <li class="filter-item">
-                        <button type="button" class="filter-button">Додатки</button>
+                    <li class="filter__item">
+                        <button type="button" class="filter__button">Додатки</button>
                     </li>
-                    <li class="filter-item">
-                        <button type="button" class="filter-button">Дизайн</button>
+                    <li class="filter__item">
+                        <button type="button" class="filter__button">Дизайн</button>
                     </li>
-                    <li class="filter-item">
-                        <button type="button" class="filter-button">Маркетинг</button>
+                    <li class="filter__item">
+                        <button type="button" class="filter__button">Маркетинг</button>
                     </li>
                 </ul>
             </div>
@@ -233,7 +233,8 @@
                         <li class="footer-address__item"><a href="mailto:info@devstudio.com"
                                 class="link">info@devstudio.com</a>
                         </li>
-                        <li class="footer-address__item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                        <li class="footer-address__item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+                        </li>
                     </ul>
                 </address>
             </div>
@@ -241,28 +242,32 @@
                 <h2 class="socials-signin">приєднуйтесь</h2>
                 <ul class="socials">
                     <li class="socials__items">
-                        <a href="#" class="socials__link socials__link--footer" target="_blank" rel="noopener norefferer">
+                        <a href="#" class="socials__link socials__link--footer" target="_blank"
+                            rel="noopener norefferer">
                             <svg class="icon icon-instagram-1" width="20" height="20">
                                 <use xlink:href="./images/icons.svg#icon-instagram-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="socials__items">
-                        <a href="#" class="socials__link socials__link--footer" target="_blank" rel="noopener norefferer">
+                        <a href="#" class="socials__link socials__link--footer" target="_blank"
+                            rel="noopener norefferer">
                             <svg class="icon icon-twitter-1" width="20" height="20">
                                 <use xlink:href="./images/icons.svg#icon-twitter-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="socials__items">
-                        <a href="#" class="socials__link socials__link--footer" target="_blank" rel="noopener norefferer">
+                        <a href="#" class="socials__link socials__link--footer" target="_blank"
+                            rel="noopener norefferer">
                             <svg class="icon icon-facebook-1" width="20" height="20">
                                 <use xlink:href="./images/icons.svg#icon-facebook-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="socials__items">
-                        <a href="#" class="socials__link socials__link--footer" target="_blank" rel="noopener norefferer">
+                        <a href="#" class="socials__link socials__link--footer" target="_blank"
+                            rel="noopener norefferer">
                             <svg class="icon icon-linkedin-1" width="20" height="20">
                                 <use xlink:href="./images/icons.svg#icon-linkedin-1"></use>
                             </svg>
@@ -281,7 +286,7 @@
                         </svg>
                     </button>
                 </form>
-    
+
             </div>
         </div>
     </footer>
